--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
     </dependencies>
 
 
